# presentation

./: .gitignore  CMakeLists.txt  Readme.md
src/: CMakeLists.txt  Presentation.md  Readme.md  header.tex
src/images/: CMakeLists.txt  Readme.md
src/plantuml/: CMakeLists.txt  Readme.md  bachelor.puml  base.puml  conti.puml  eb.puml  eso.puml  internships.puml  master.puml  style.ipuml  thesis.puml  timing_base.ipuml  use.ipuml  use_bachelor.puml  use_conti.puml  use_eb.puml  use_eso.puml  use_intern.puml  use_master.puml  use_student.puml  use_thesis.puml  working_student.puml
src/plantuml/private/: CMakeLists.txt  all.puml  ccc.puml  climbing.puml  hiking.puml  maker.puml  music.puml  para.puml  timing_base.ipuml
src/qrencode/: CMakeLists.txt  Readme.md
